@@ -30,7 +30,6 @@ lib_LTLIBRARIES = libkernaux.la
 libkernaux_la_LIBADD =
 libkernaux_la_SOURCES = \
 	src/assert.c \
-	src/libc.h \
 	src/generic/malloc.c \
 	src/generic/mutex.c
 
