@@ -89,7 +89,43 @@
 - result: '1.200000'
   args: [['%f', 1.2]]
   float: true
-
 - result: '123.456789'
   args: [['%f', 123.456789]]
+  float: true
+
+- result: '0.01234568'
+  args: [['%.8f',  0.0123456789012345678901234567890123456789]]
+  float: true
+- result: '0.012345679'
+  args: [['%.9f',  0.0123456789012345678901234567890123456789]]
+  float: true
+# Actual precision is no more than 9
+- result: '0.0123456790'
+  args: [['%.10f', 0.0123456789012345678901234567890123456789]]
+  float: true
+- result: '0.01234567900'
+  args: [['%.11f', 0.0123456789012345678901234567890123456789]]
+  float: true
+- result: '0.012345679000'
+  args: [['%.12f', 0.0123456789012345678901234567890123456789]]
+  float: true
+- result: '0.012345679000000000000000000000'
+  args: [['%.30f', 0.0123456789012345678901234567890123456789]]
+  float: true
+# Actual length is no more than 32
+- result: '0.012345679000000000000000000000'
+  args: [['%.31f', 0.0123456789012345678901234567890123456789]]
+  float: true
+- result: '0.012345679000000000000000000000'
+  args: [['%.32f', 0.0123456789012345678901234567890123456789]]
+  float: true
+# Actual length is no more than 32
+- result: '10.01234567900000000000000000000'
+  args: [['%.32f', 10.0123456789012345678901234567890123456789]]
+  float: true
+- result: '100.0123456790000000000000000000'
+  args: [['%.32f', 100.0123456789012345678901234567890123456789]]
+  float: true
+- result: '1000.012345679000000000000000000'
+  args: [['%.32f', 1000.0123456789012345678901234567890123456789]]
   float: true
